fixed bug where button animation would not show on Safari

--- a/src/styles/btn.css
+++ b/src/styles/btn.css
@@ -51,11 +51,11 @@
 
 @keyframes expand {
     0% {
-        transform: translate(-50%, -50%) scale(0%);
-        opacity: 0.3;
+        transform: translate(-50%, -50%) scale(0, 0);
+        opacity: .3;
     }
     100% {
-        transform: translate(-50%, -50%) scale(100%);
+        transform: translate(-50%, -50%) scale(1, 1);
         opacity: 0;
     }
 }
